samples/glossentry/invalid/R5.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <glossdef><p>Definition.</p></glossdef>
</glossentry>